objects/Employee_Class__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <description>This field is created as part of story PRDCRM-46265</description>
        <formula>HYPERLINK( Group__r.Account__r.Id , Group__r.Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Class_Name__c</fullName>
        <description>This field is created as part of story PRDCRM-46265</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Customer defined</inlineHelpText>
        <label>Employee Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Class_Type__c</fullName>
        <description>This field is created as part of story PRDCRM-46265</description>
        <label>Employee Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>Geographic Location</fullName>
                </value>
                <value>
                    <fullName>Payroll Location</fullName>
                </value>
                <value>
                    <fullName>Salary Class</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Store Number</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <isActive>false</isActive>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formatted_Last_Modified_Date__c</fullName>
        <description>Its a formula field to format last modified date in MM/DD/YYYY format and to display in Account structure Omni script</description>
        <formula>LastModifiedBy.FirstName + &apos; &apos;+  LastModifiedBy.LastName +&apos; &apos;  +TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;/&quot; +
TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;/&quot; +
TEXT(YEAR(DATEVALUE(LastModifiedDate)))+ &quot; &quot; +
IF( OR( VALUE( MID( TEXT( LastModifiedDate ), 12, 2 ) ) = 0, VALUE( MID( TEXT( LastModifiedDate ), 12, 2 ) ) = 12 ), &quot;12&quot;, TEXT( VALUE( MID( TEXT( LastModifiedDate ), 12, 2 ) ) - IF( VALUE( MID( TEXT( LastModifiedDate ), 12, 2 ) ) &lt; 12, 0, 12 ) ) ) &amp; &quot;:&quot; &amp; MID( TEXT( LastModifiedDate ), 15, 2 ) &amp; &quot;:&quot; &amp; MID( TEXT( LastModifiedDate ), 18, 2 ) &amp; &quot; &quot; &amp; IF( VALUE( MID( TEXT( LastModifiedDate ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Last Modified Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as part of story PRDCRM-46265</description>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Employee Class</relationshipLabel>
        <relationshipName>Employee_Class</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee Class</label>
    <nameField>
        <displayFormat>CLASS-{000000}</displayFormat>
        <label>Employee Class Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>